[package]
name = "node-runtime"
version = "0.2.2"
authors = ["BlockX Labs"]
edition = "2018"
build = "build.rs"

[dependencies]
# third-party dependencies
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }
failure_derive = { version = "0.1.7", optional = false }

# primitives
node-primitives = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
primitives = { package = "sp-core", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
sp-runtime = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
sp-staking = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
sp-api = { package = "sp-api", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
inherents = { package = "sp-inherents", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
sp-transaction-pool = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
sp-std = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
version = { package = "sp-version", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
sp-session = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }

# frame dependencies
authorship = { package = "pallet-authorship", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
authority-discovery = { package = "pallet-authority-discovery", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
babe = { package = "pallet-babe", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
balances = { package = "pallet-balances", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
executive = { package = "frame-executive", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
finality-tracker = { package = "pallet-finality-tracker", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
grandpa = { package = "pallet-grandpa", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
im-online = { package = "pallet-im-online", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
indices = { package = "pallet-indices", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
offences = { package = "pallet-offences", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
randomness-collective-flip = { package = "pallet-randomness-collective-flip", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
collective = { package = "pallet-collective", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
session = { package = "pallet-session", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
staking = { package = "pallet-staking", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
pallet-staking-reward-curve = { git = "https://github.com/blockxlabs/substrate", branch = "blockx-dev", default-features = false }
sudo = { package = "pallet-sudo", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
support = { package = "frame-support", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
system = { package = "frame-system", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
system-rpc-runtime-api = { package = "frame-system-rpc-runtime-api", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
timestamp = { package = "pallet-timestamp", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
utility = { package = "pallet-utility", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
transaction-payment-rpc-runtime-api = { package = "pallet-transaction-payment-rpc-runtime-api", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
treasury = { package = "pallet-treasury", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
democracy = { package = "pallet-democracy", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
identity = { package = "pallet-identity", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
elections-phragmen = { package = "pallet-elections-phragmen", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
membership = { package = "pallet-membership", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
# pallet-contracts-rpc-runtime-api = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }

assets = { package = "dna-assets", path = "../../dna/assets", default-features = false }
dex = { package = "dna-exchange", path = "../../dna/exchange", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.4", git = "https://github.com/blockxlabs/substrate", branch = "blockx-dev" }

[features]
default = ["std"]
std = [
    "authority-discovery-primitives/std",
    "authority-discovery/std",
    "authorship/std",
    "babe-primitives/std",
    "babe/std",
    "balances/std",
    "sp-api/std",
    "codec/std",
    "executive/std",
    "finality-tracker/std",
    "grandpa/std",
    "im-online/std",
    "indices/std",
    "node-primitives/std",
    "offchain-primitives/std",
    "offences/std",
    "primitives/std",
    "randomness-collective-flip/std",
    "sp-std/std",
    "serde",
    "serde_derive",
    "session/std",
    "sp-runtime/std",
    "sp-staking/std",
    "staking/std",
    "sp-session/std",
    "sudo/std",
    "support/std",
    "system/std",
    "system-rpc-runtime-api/std",
    "timestamp/std",
    "utility/std",
    "transaction-payment/std",
    "transaction-payment-rpc-runtime-api/std",
    "version/std",
    "block-builder-api/std",
    "sp-transaction-pool/std",
    "inherents/std",
    "collective/std",
    "treasury/std",
    "democracy/std",
    "identity/std",
    "elections-phragmen/std",
    "membership/std",
]
