[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'dna-runtime-wasm'
version = '1.0.0'
[dependencies.dna-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['dna-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
